kubernetes/grafana/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: grafana
  name: grafana
spec:
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app.kubernetes.io/name: grafana
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: snmp-exporter
    app.kubernetes.io/name: snmp-exporter
    app.kubernetes.io/part-of: grafana
  name: snmp-exporter
spec:
  ports:
  - name: snmp-exporter
    port: 9116
    targetPort: 9116
    protocol: TCP
  selector:
    app.kubernetes.io/name: snmp-exporter
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: thanos-sidecar
    app.kubernetes.io/name: thanos-sidecar
    app.kubernetes.io/part-of: grafana
  name: thanos-sidecar
spec:
  ports:
  - name: thanos-sidecar
    port: 10091
    targetPort: 10091
    protocol: TCP
  selector:
    app.kubernetes.io/name: thanos-sidecar
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: thanos-store-gateway
    app.kubernetes.io/name: thanos-store-gateway
    app.kubernetes.io/part-of: grafana
  name: thanos-store-gateway
spec:
  ports:
  - name: thanos-store-gateway
    port: 10091
    targetPort: 10091
    protocol: TCP
  selector:
    app.kubernetes.io/name: thanos-store-gateway
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: thanos-querier
    app.kubernetes.io/name: thanos-querier
    app.kubernetes.io/part-of: grafana
  name: thanos-querier
spec:
  ports:
  - name: thanos-querier
    port: 10902
    targetPort: 10902
    protocol: TCP
  selector:
    app.kubernetes.io/name: thanos-querier
